syntax = "proto3";

package infrastructure.proto.user.v1;

import "app/infrastructure/proto/v1/user/create.proto";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
}
